--- a/Exercises/day_1/Day1_exercise.ipynb
+++ b/Exercises/day_1/Day1_exercise.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 154,
       "id": "37a781ea",
       "metadata": {
         "id": "37a781ea"
@@ -50,6 +50,8 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
         "from sklearn.metrics import f1_score\n",
+        "from imblearn.over_sampling import RandomOverSampler\n",
+        "\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -67,14 +69,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 155,
       "id": "3174f698",
       "metadata": {
         "id": "3174f698",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4aa95c60-27fc-4a1f-e158-c7153b49aee5"
+        "outputId": "65c7531f-13b2-4367-f201-5a86a686ea03"
       },
       "outputs": [
         {
@@ -94,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 156,
       "id": "1652c2b0",
       "metadata": {
         "id": "1652c2b0",
@@ -102,7 +104,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 394
         },
-        "outputId": "59dad75d-0f9b-41a1-875c-8c851325110d"
+        "outputId": "3d4aa47a-2d7f-4fee-a39d-0b99d1e5fc6a"
       },
       "outputs": [
         {
@@ -155,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9d71f5f-44ac-4882-a7d3-3c2e4ef258b4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9f90fde1-284f-4066-86fd-b948ef451c52\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -325,7 +327,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9d71f5f-44ac-4882-a7d3-3c2e4ef258b4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f90fde1-284f-4066-86fd-b948ef451c52')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -377,12 +379,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a9d71f5f-44ac-4882-a7d3-3c2e4ef258b4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9f90fde1-284f-4066-86fd-b948ef451c52 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a9d71f5f-44ac-4882-a7d3-3c2e4ef258b4');\n",
+              "        const element = document.querySelector('#df-9f90fde1-284f-4066-86fd-b948ef451c52');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -411,7 +413,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 156
         }
       ],
       "source": [
@@ -438,14 +440,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 157,
       "id": "f84615f6",
       "metadata": {
         "id": "f84615f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3b65ca1-83af-4a25-883b-56f4e5c08d39"
+        "outputId": "f5e515ca-2fcb-4033-ef27-10ffd54e0f68"
       },
       "outputs": [
         {
@@ -511,7 +513,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 158,
       "id": "6ab5bfcc",
       "metadata": {
         "id": "6ab5bfcc",
@@ -519,7 +521,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
-        "outputId": "571cb2c3-9b39-47b3-f1e5-f7cbc4e67f45"
+        "outputId": "812ba5f8-2d5c-47fd-9730-f704f756a80a"
       },
       "outputs": [
         {
@@ -572,7 +574,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 158
         }
       ],
       "source": [
@@ -584,15 +586,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 159,
       "id": "7df81cbb",
       "metadata": {
         "id": "7df81cbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 332
         },
-        "outputId": "df2fa141-03a0-43af-d38e-48a6de22c15b"
+        "outputId": "00e6653c-09be-4381-90f1-34f930a39750"
       },
       "outputs": [
         {
@@ -631,14 +633,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 160,
       "id": "43468b47",
       "metadata": {
         "id": "43468b47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3349b7d5-995a-4a5f-8ce5-72e6f4d134ec"
+        "outputId": "24c14a7b-4557-441d-ad4d-cff25f66a6c0"
       },
       "outputs": [
         {
@@ -660,19 +662,20 @@
         "\n",
         "print(f\"Before: {df_clean.shape}\")\n",
         "df_clean = df_clean.dropna(subset=['hp', 'attack', 'defense', 'sp_attack', 'sp_defense', 'speed'])\n",
-        "print(f\"After dropping missing attack: {df_clean.shape}\")"
+        "print(f\"After dropping missing attack: {df_clean.shape}\")\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 161,
       "id": "d481facb",
       "metadata": {
         "id": "d481facb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e00ab486-d094-41e7-8c78-7ed0c6dc0411"
+        "outputId": "0ea00e8f-2485-4b00-e846-6142ab401e64"
       },
       "outputs": [
         {
@@ -702,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 162,
       "id": "8ac56be3",
       "metadata": {
         "id": "8ac56be3"
@@ -728,7 +731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 163,
       "id": "47dc49c8",
       "metadata": {
         "id": "47dc49c8"
@@ -756,14 +759,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 164,
       "id": "bcac5f61",
       "metadata": {
         "id": "bcac5f61",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba18668d-89ef-485d-c766-1309fde3d2c8"
+        "outputId": "47d248c3-2628-4299-b833-e4aeb85983f7"
       },
       "outputs": [
         {
@@ -795,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 165,
       "id": "8fdd8338",
       "metadata": {
         "id": "8fdd8338"
@@ -822,22 +825,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 166,
       "id": "3923bfec",
       "metadata": {
         "id": "3923bfec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c4d19ae-aca7-4ea9-a95d-f0ea0a881dcf"
+        "outputId": "85bb4492-692e-4e0a-f4cf-04b71a2377fb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model trained successfully\n",
-            "Legendary F1-score: 0.8800\n"
+            "Model trained successfully\n"
           ]
         }
       ],
@@ -855,10 +857,7 @@
         "\n",
         "# YOUR CODE HERE - fit the model\n",
         "model.fit(X_train_scaled, y_train)\n",
-        "print(\"Model trained successfully\")\n",
-        "y_pred = model.predict(X_test_scaled)\n",
-        "f1 = f1_score(y_test, y_pred)\n",
-        "print(f\"Legendary F1-score: {f1:.4f}\")"
+        "print(\"Model trained successfully\")"
       ]
     },
     {
@@ -873,14 +872,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 169,
       "id": "eff26b4c",
       "metadata": {
         "id": "eff26b4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af6c422f-ed72-4920-c540-db7a326bbbf6"
+        "outputId": "26b8ae45-06e7-498d-9fce-dabecaf02327"
       },
       "outputs": [
         {
@@ -911,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 170,
       "id": "350effb5",
       "metadata": {
         "id": "350effb5",
@@ -919,7 +918,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 410
         },
-        "outputId": "695173a0-bd5f-4588-f986-c4dc00f4cf78"
+        "outputId": "5da388b7-cbf7-42d6-82fa-bbcc62002b78"
       },
       "outputs": [
         {
